infra/webserver-example/deployment.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: nginx
  labels:
    name: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          limits:
            memory: "50Mi"
            cpu: "10m"
          requests:
            memory: "50Mi"
            cpu: "10m"
        volumeMounts:
        - name: nginx-home
          mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-home
          hostPath:
            path: /data/nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx
spec:
  type: ClusterIP
  #xternalIPs: #To use only in Microk8s or Kubeadm env
  #- 10.0.2.4
  selector:
    app: nginx
  ports:
    - name: http-port
      port: 80
      targetPort: 80
    - name: https-port
      port: 443
      targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - nginx.local
    secretName: secret-nginx.local
  rules:
  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
